--- a/_output.yml
+++ b/_output.yml
@@ -3,9 +3,9 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">A Minimal Book Example</a></li>
+        <li><a href="./">R for Campaigns</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+        <li><a href="https://github.com/josiahparry/r-4-campaigns" target="blank">GitHub</a></li>
     download: ["pdf", "epub"]
 bookdown::pdf_book:
   includes:
